// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Navbar Components defalut snapshot 1`] = `
<Fragment>
  <div
    className="navbarSelf"
  >
    <div
      className="title"
    >
      <h1
        style={
          Object {
            "color": "#66fcf1",
            "fontSize": "3rem",
            "fontWeight": "900",
            "margin": 0,
          }
        }
      >
        Pokedex
      </h1>
    </div>
    <div
      className="pokeTypes"
    >
      <h3
        style={
          Object {
            "color": "#66fcf1",
          }
        }
      >
        Types
      </h3>
      <ul
        className="list"
      >
        <li
          key="0"
        >
          <div>
            <div>
              <input
                checked={false}
                name="Grass"
                onChange={[Function]}
                type="checkbox"
                value="Grass"
              />
              <label
                style={
                  Object {
                    "color": "#66fcf1",
                  }
                }
              >
                Grass
              </label>
            </div>
          </div>
        </li>
        <li
          key="1"
        >
          <div>
            <div>
              <input
                checked={false}
                name="Poison"
                onChange={[Function]}
                type="checkbox"
                value="Poison"
              />
              <label
                style={
                  Object {
                    "color": "#66fcf1",
                  }
                }
              >
                Poison
              </label>
            </div>
          </div>
        </li>
        <li
          key="2"
        >
          <div>
            <div>
              <input
                checked={false}
                name="Fire"
                onChange={[Function]}
                type="checkbox"
                value="Fire"
              />
              <label
                style={
                  Object {
                    "color": "#66fcf1",
                  }
                }
              >
                Fire
              </label>
            </div>
          </div>
        </li>
        <li
          key="3"
        >
          <div>
            <div>
              <input
                checked={false}
                name="Flying"
                onChange={[Function]}
                type="checkbox"
                value="Flying"
              />
              <label
                style={
                  Object {
                    "color": "#66fcf1",
                  }
                }
              >
                Flying
              </label>
            </div>
          </div>
        </li>
        <li
          key="4"
        >
          <div>
            <div>
              <input
                checked={false}
                name="Water"
                onChange={[Function]}
                type="checkbox"
                value="Water"
              />
              <label
                style={
                  Object {
                    "color": "#66fcf1",
                  }
                }
              >
                Water
              </label>
            </div>
          </div>
        </li>
        <li
          key="5"
        >
          <div>
            <div>
              <input
                checked={false}
                name="Bug"
                onChange={[Function]}
                type="checkbox"
                value="Bug"
              />
              <label
                style={
                  Object {
                    "color": "#66fcf1",
                  }
                }
              >
                Bug
              </label>
            </div>
          </div>
        </li>
        <li
          key="6"
        >
          <div>
            <div>
              <input
                checked={false}
                name="Normal"
                onChange={[Function]}
                type="checkbox"
                value="Normal"
              />
              <label
                style={
                  Object {
                    "color": "#66fcf1",
                  }
                }
              >
                Normal
              </label>
            </div>
          </div>
        </li>
        <li
          key="7"
        >
          <div>
            <div>
              <input
                checked={false}
                name="Electric"
                onChange={[Function]}
                type="checkbox"
                value="Electric"
              />
              <label
                style={
                  Object {
                    "color": "#66fcf1",
                  }
                }
              >
                Electric
              </label>
            </div>
          </div>
        </li>
        <li
          key="8"
        >
          <div>
            <div>
              <input
                checked={false}
                name="Ground"
                onChange={[Function]}
                type="checkbox"
                value="Ground"
              />
              <label
                style={
                  Object {
                    "color": "#66fcf1",
                  }
                }
              >
                Ground
              </label>
            </div>
          </div>
        </li>
        <li
          key="9"
        >
          <div>
            <div>
              <input
                checked={false}
                name="Psychic"
                onChange={[Function]}
                type="checkbox"
                value="Psychic"
              />
              <label
                style={
                  Object {
                    "color": "#66fcf1",
                  }
                }
              >
                Psychic
              </label>
            </div>
          </div>
        </li>
        <li
          key="10"
        >
          <div>
            <div>
              <input
                checked={false}
                name="Rock"
                onChange={[Function]}
                type="checkbox"
                value="Rock"
              />
              <label
                style={
                  Object {
                    "color": "#66fcf1",
                  }
                }
              >
                Rock
              </label>
            </div>
          </div>
        </li>
        <li
          key="11"
        >
          <div>
            <div>
              <input
                checked={false}
                name="Ice"
                onChange={[Function]}
                type="checkbox"
                value="Ice"
              />
              <label
                style={
                  Object {
                    "color": "#66fcf1",
                  }
                }
              >
                Ice
              </label>
            </div>
          </div>
        </li>
        <li
          key="12"
        >
          <div>
            <div>
              <input
                checked={false}
                name="Ghost"
                onChange={[Function]}
                type="checkbox"
                value="Ghost"
              />
              <label
                style={
                  Object {
                    "color": "#66fcf1",
                  }
                }
              >
                Ghost
              </label>
            </div>
          </div>
        </li>
        <li
          key="13"
        >
          <div>
            <div>
              <input
                checked={false}
                name="Dragon"
                onChange={[Function]}
                type="checkbox"
                value="Dragon"
              />
              <label
                style={
                  Object {
                    "color": "#66fcf1",
                  }
                }
              >
                Dragon
              </label>
            </div>
          </div>
        </li>
        <li
          key="14"
        >
          <div>
            <div>
              <input
                checked={false}
                name="Fighting"
                onChange={[Function]}
                type="checkbox"
                value="Fighting"
              />
              <label
                style={
                  Object {
                    "color": "#66fcf1",
                  }
                }
              >
                Fighting
              </label>
            </div>
          </div>
        </li>
      </ul>
    </div>
    <div
      className="pokeWeekness"
    >
      <h3
        style={
          Object {
            "color": "#66fcf1",
          }
        }
      >
        Weaknesses
      </h3>
      <ul
        className="list"
      >
        <li
          key="0"
        >
          <div>
            <div>
              <input
                checked={false}
                name="Grass"
                onChange={[Function]}
                type="checkbox"
                value="Grass"
              />
              <label
                style={
                  Object {
                    "color": "#66fcf1",
                  }
                }
              >
                Grass
              </label>
            </div>
          </div>
        </li>
        <li
          key="1"
        >
          <div>
            <div>
              <input
                checked={false}
                name="Poison"
                onChange={[Function]}
                type="checkbox"
                value="Poison"
              />
              <label
                style={
                  Object {
                    "color": "#66fcf1",
                  }
                }
              >
                Poison
              </label>
            </div>
          </div>
        </li>
        <li
          key="2"
        >
          <div>
            <div>
              <input
                checked={false}
                name="Fire"
                onChange={[Function]}
                type="checkbox"
                value="Fire"
              />
              <label
                style={
                  Object {
                    "color": "#66fcf1",
                  }
                }
              >
                Fire
              </label>
            </div>
          </div>
        </li>
        <li
          key="3"
        >
          <div>
            <div>
              <input
                checked={false}
                name="Flying"
                onChange={[Function]}
                type="checkbox"
                value="Flying"
              />
              <label
                style={
                  Object {
                    "color": "#66fcf1",
                  }
                }
              >
                Flying
              </label>
            </div>
          </div>
        </li>
        <li
          key="4"
        >
          <div>
            <div>
              <input
                checked={false}
                name="Water"
                onChange={[Function]}
                type="checkbox"
                value="Water"
              />
              <label
                style={
                  Object {
                    "color": "#66fcf1",
                  }
                }
              >
                Water
              </label>
            </div>
          </div>
        </li>
        <li
          key="5"
        >
          <div>
            <div>
              <input
                checked={false}
                name="Bug"
                onChange={[Function]}
                type="checkbox"
                value="Bug"
              />
              <label
                style={
                  Object {
                    "color": "#66fcf1",
                  }
                }
              >
                Bug
              </label>
            </div>
          </div>
        </li>
        <li
          key="6"
        >
          <div>
            <div>
              <input
                checked={false}
                name="Fairy"
                onChange={[Function]}
                type="checkbox"
                value="Fairy"
              />
              <label
                style={
                  Object {
                    "color": "#66fcf1",
                  }
                }
              >
                Fairy
              </label>
            </div>
          </div>
        </li>
        <li
          key="7"
        >
          <div>
            <div>
              <input
                checked={false}
                name="Electric"
                onChange={[Function]}
                type="checkbox"
                value="Electric"
              />
              <label
                style={
                  Object {
                    "color": "#66fcf1",
                  }
                }
              >
                Electric
              </label>
            </div>
          </div>
        </li>
        <li
          key="8"
        >
          <div>
            <div>
              <input
                checked={false}
                name="Ground"
                onChange={[Function]}
                type="checkbox"
                value="Ground"
              />
              <label
                style={
                  Object {
                    "color": "#66fcf1",
                  }
                }
              >
                Ground
              </label>
            </div>
          </div>
        </li>
        <li
          key="9"
        >
          <div>
            <div>
              <input
                checked={false}
                name="Psychic"
                onChange={[Function]}
                type="checkbox"
                value="Psychic"
              />
              <label
                style={
                  Object {
                    "color": "#66fcf1",
                  }
                }
              >
                Psychic
              </label>
            </div>
          </div>
        </li>
        <li
          key="10"
        >
          <div>
            <div>
              <input
                checked={false}
                name="Rock"
                onChange={[Function]}
                type="checkbox"
                value="Rock"
              />
              <label
                style={
                  Object {
                    "color": "#66fcf1",
                  }
                }
              >
                Rock
              </label>
            </div>
          </div>
        </li>
        <li
          key="11"
        >
          <div>
            <div>
              <input
                checked={false}
                name="Ice"
                onChange={[Function]}
                type="checkbox"
                value="Ice"
              />
              <label
                style={
                  Object {
                    "color": "#66fcf1",
                  }
                }
              >
                Ice
              </label>
            </div>
          </div>
        </li>
        <li
          key="12"
        >
          <div>
            <div>
              <input
                checked={false}
                name="Ghost"
                onChange={[Function]}
                type="checkbox"
                value="Ghost"
              />
              <label
                style={
                  Object {
                    "color": "#66fcf1",
                  }
                }
              >
                Ghost
              </label>
            </div>
          </div>
        </li>
        <li
          key="13"
        >
          <div>
            <div>
              <input
                checked={false}
                name="Dragon"
                onChange={[Function]}
                type="checkbox"
                value="Dragon"
              />
              <label
                style={
                  Object {
                    "color": "#66fcf1",
                  }
                }
              >
                Dragon
              </label>
            </div>
          </div>
        </li>
        <li
          key="14"
        >
          <div>
            <div>
              <input
                checked={false}
                name="Fighting"
                onChange={[Function]}
                type="checkbox"
                value="Fighting"
              />
              <label
                style={
                  Object {
                    "color": "#66fcf1",
                  }
                }
              >
                Fighting
              </label>
            </div>
          </div>
        </li>
        <li
          key="15"
        >
          <div>
            <div>
              <input
                checked={false}
                name="Steel"
                onChange={[Function]}
                type="checkbox"
                value="Steel"
              />
              <label
                style={
                  Object {
                    "color": "#66fcf1",
                  }
                }
              >
                Steel
              </label>
            </div>
          </div>
        </li>
        <li
          key="16"
        >
          <div>
            <div>
              <input
                checked={false}
                name="Dark"
                onChange={[Function]}
                type="checkbox"
                value="Dark"
              />
              <label
                style={
                  Object {
                    "color": "#66fcf1",
                  }
                }
              >
                Dark
              </label>
            </div>
          </div>
        </li>
      </ul>
    </div>
    <div
      className="searchBar"
    >
      <input
        onChange={[Function]}
        placeholder="Search.."
        type="text"
        value=""
      />
    </div>
  </div>
  <List
    currText=""
    pokeType={Array []}
    pokeWeakness={Array []}
  />
</Fragment>
`;

exports[`Navbar Components input first click snapshot 1`] = `
<input
  checked={false}
  name="Grass"
  onChange={[Function]}
  type="checkbox"
  value="Grass"
/>
`;

exports[`Navbar Components input last click snapshot 1`] = `
<input
  checked={false}
  name="Steel"
  onChange={[Function]}
  type="checkbox"
  value="Steel"
/>
`;

exports[`Navbar Components input search snapshot 1`] = `
<input
  onChange={[Function]}
  placeholder="Search.."
  type="text"
  value=""
/>
`;
